--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,4 @@
 theme:jekyll-theme-minimal
 remote_theme: pages-themes/modernist@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
-- gem "github-pages", group: :jekyll_plugins
+- jekyll-remote-theme
 - title: Japheth's Portfolio
-description: This is my portfolio website, made public for job hunting and interviews.
