--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,8 @@
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme
+title: "Japheth's Portfolio"
+:logo
+description: >
+  Web3 community manager and growth strategist helping DeFi, AI, and GameFi projects grow through on-chain insight, structured engagement, and long-term community alignment.
 
